// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly expanded 1`] = `
"<ToggleDetails divider=\\"dashed\\" icon={[Function]} iconExpanded={[Function]} summary={{...}} expanded={true} onToggle={[Function]} fluidWidth={true} variant=\\"default\\" size=\\"medium\\" iconPosition=\\"start\\" defaultExpanded={false}>
  <View as=\\"div\\" borderWidth=\\"small 0 0 0\\" display=\\"auto\\">
    <List variant=\\"unstyled\\" delimiter=\\"dashed\\" as=\\"ul\\" margin=\\"none\\" size=\\"medium\\">
      <ListItem>
        <AssignmentResult result={{...}} outcome={{...}} />
      </ListItem>
    </List>
  </View>
</ToggleDetails>"
`;

exports[`renders correctly expanded with no results 1`] = `
"<ToggleDetails divider=\\"dashed\\" icon={[Function]} iconExpanded={[Function]} summary={{...}} expanded={true} onToggle={[Function]} fluidWidth={true} variant=\\"default\\" size=\\"medium\\" iconPosition=\\"start\\" defaultExpanded={false}>
  <View as=\\"div\\" padding=\\"small\\" borderWidth=\\"small 0 0 0\\" display=\\"auto\\">
    <Text as=\\"span\\" size=\\"medium\\" letterSpacing=\\"normal\\">
      No alignments are available for this outcome.
    </Text>
  </View>
</ToggleDetails>"
`;

exports[`renders the Outcome component 1`] = `
"<ToggleDetails divider=\\"dashed\\" icon={[Function]} iconExpanded={[Function]} summary={{...}} expanded={false} onToggle={[Function]} fluidWidth={true} variant=\\"default\\" size=\\"medium\\" iconPosition=\\"start\\" defaultExpanded={false}>
  <View as=\\"div\\" borderWidth=\\"small 0 0 0\\" display=\\"auto\\">
    <List variant=\\"unstyled\\" delimiter=\\"dashed\\" as=\\"ul\\" margin=\\"none\\" size=\\"medium\\">
      <ListItem>
        <AssignmentResult result={{...}} outcome={{...}} />
      </ListItem>
    </List>
  </View>
</ToggleDetails>"
`;
